theme/annotation.css
.ck-annotated-text {
  font-weight: bold;
  font-size: 16px;
}

.ck-annotated-question, .ck-annotated-question-button:hover, .ck-annotated-question-button.ck-on {
  background: #C5E6FF !important;
}

.ck-annotated-section, .ck-annotated-section-button:hover, .ck-annotated-section-button.ck-on {
  background: #F8F883 !important;
}

.ck-annotated-guideline, .ck-annotated-guideline-button:hover, .ck-annotated-guideline-button.ck-on {
  background: #9DFDE1 !important;
}

.ck-annotated-answer, .ck-annotated-answer-button:hover, .ck-annotated-answer-button.ck-on {
  background: #F7CAF5 !important;
}

.ck-simple-block-view__section {
  font-weight: bold;
  color: #e89433;
}


.ck-simple-block-view__question {
  font-weight: bold;
  font-size: 14px;
}

.ck-simple-block-view__answer {
  border: 1px dashed #b5b5b5;
  margin: 1px;
  line-height: 1.5em;
  padding: 0px 10px;
}

.ck-simple-block-view__guideline {
  color: #50b525;
  font-size: 14px;
}

/* Table level annotations */
.ck-annotated-table {}

.ck-annotated-table td, .ck-annotated-table th {
  border-color: #212121 !important;
  background: transparent !important;
}

.ck-annotated-table thead, .ck-annotated-table tbody {
  background: none;
}

.ck-annotated-table--question-table {
  border: solid 5px rgba(255, 165, 0, 0.7) !important;
}

.ck-annotated-table--formatting-table {
  border: #ffffff !important;
  background: #ffffff !important;
}

.ck-annotated-table--content-table {
  border: solid 5px #d5fdf9 !important;
}

.ck-table-annotate-question-table-button:hover, .ck-table-annotate-question-table-button.ck-on {
  background: #FDAD81 !important;
}

.ck-table-annotate-content-table-button:hover, .ck-table-annotate-content-table-button.ck-on {
  background: #d5fdf9 !important;
}

.ck-table-annotate-formatting-table-button:hover, .ck-table-annotate-formatting-table-button.ck-on {
  background: #ffffff !important;
}

